jwt refactoring
